--- a/client/src/components/Pages/About/TeamCards/CardTeam.module.css
+++ b/client/src/components/Pages/About/TeamCards/CardTeam.module.css
@@ -1,16 +1,16 @@
+/**//**//**//**//**//**//**//**//**//**//**//**//**//**/
+/*Card container*/
 .container{
     max-width: 100%;
     max-height: 100%;
-    width: 300px;
-    height: 310px;
     border-radius: 10px;
 }
-
 .container:hover{
     background-color:rgb(21, 86, 146);
     color: white;
 }
-
+/**//**//**//**//**//**//**//**//**//**//**//**//**//**/
+/*Avatar*/
 .imgContainer{
     width: 100%;
     height: 200px;
@@ -21,25 +21,21 @@
     justify-content: center;
     align-items: center;
 }
-
 .imgContainer img {
     border-radius: 100%;
 }
-
-.avatarIMG{
-    max-width: 100%;
-    max-height: 100%;
-    width: 180px;
-    height: 180px;
-    border-radius: 150px;
-}
-
+/**//**//**//**//**//**//**//**//**//**//**//**//**//**/
+/*Name and rol*/
 .bodycss{
     padding-bottom: 30px;
     max-width: 100%;
     max-height: 100%;
 }
-
 .bodycss h2 {
     font-family: "Texto Thin";
+    font-size: 20px;
+}
+.bodycss span{
+    font-family: "Texto thin";
+    font-size: 18px;
 }
